--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -79,9 +79,13 @@
   text-transform: capitalize;
 }
 
-.field_with_errors input {
-  border-color: red !important;
-  background-color: #ff535340 !important;
+.field_with_errors {
+  width: -webkit-fill-available;
+
+  input {
+    border-color: red !important;
+    background-color: #ff535340 !important;
+  }
 }
 
 a.dropdown-item {
@@ -200,4 +204,15 @@ img {
   color: #ff9800;
   left: 0;
   font-size: 25px;
+}
+
+.fadeout {
+  display: none;
+  opacity: 0;
+  transition: all 1s ease-in-out;
+}
+
+@keyframes fadeout {
+  from { display: block; }
+  to   { display: none; }
 }
