--- a/app/views/admin/jobs/_form_job.html.erb
+++ b/app/views/admin/jobs/_form_job.html.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="card-body">
     <%= form_for [:admin, job], html: {multipart: true} do |f| %>
+      <%= render "shared/error_messages", resource: job %>
       <div class="row">
         <div class="col-md-12">
           <div class="form-group bmd-form-group">
@@ -21,8 +22,8 @@
         </div>
         <div class="col-md-4">
           <div class="form-group bmd-form-group row">
-            <%= f.label :end_at, "End at: ", class: "col-sm-4" %>
-            <%= date_field_tag "job[end_at]", job.end_at, {class: "col-sm-8"} %>
+            <%= f.label :end_at, "End at: ", class: "" %>
+            <%= f.date_field :end_at, {class: "form-control"} %>
           </div>
         </div>
         <div class="col-md-4">
@@ -33,19 +34,25 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="form-group bmd-form-group">
             <%= f.label :job_type, "Job type: " %>
             <%= f.select :job_type, options_for_select([["full_time", "full_time"], ["part_time","part_time"]]), {}, {class: "js-source-states col-sm-8"} %>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="form-group bmd-form-group">
             <%= f.label :experience, "Experience: ", class: "bmd-label-floating" %>
             <%= f.number_field :experience, in: 0.0..20.0, step: 0.5, class: "form-control" %>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :location_ids, "Location: " %>
+            <%= f.select :location_ids, Location.all.pluck(:name, :id), {}, {multiple: true, class: "js-source-states multi-select form-control col-sm-8"} %>
+          </div>
+        </div>
+        <div class="col-md-3">
           <div class="form-group bmd-form-group">
             <%= f.label :address, "Address: ", class: "bmd-label-floating" %>
             <%= f.text_field :address, class: "form-control" %>
